--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,15 +1,3 @@
-html {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-}
-
-body {
-  height: inherit;
-  width: inherit;
-  margin: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.row {
+  margin-bottom: 15px;
 }
